test/testdata/ingress/nginx.values.kind.yaml
# Customizes the nginx-ingress Helm chart (see the `nginx-*` targets in Makefile).
# https://github.com/kubernetes/ingress-nginx/blob/main/charts/ingress-nginx/values.yaml
#
# This Helm values file is suitable for local Kind clusters only. The NGINX service is of type NodePort, since Kind
# doesn't support LoadBalancer service types. For this reason, the Kind cluster must be created with additional
# configuration for NGINX to be able to handle incoming traffic, see script setup-kind-multicluster.sh.
#

controller:
  service:
    type: NodePort
    # Note on ports:
    #
    # There is a double port indirection:
    # outside world -> 3x080 -> kind docker container / worker node -> 30080 -> pod (container inside container)
    #
    # The port to use from the outside world depends on the context's zero-based index; e.g.
    # kind-k8ssandra-0 = index 0 = 30080
    # kind-k8ssandra-1 = index 1 = 31080
    # etc.
    #
    # The first port mapping is defined when creating the Kind cluster, see setup-kind-multicluster.sh, and depends on
    # the context index; this Helm file takes care of the second port mapping (from worker node to pod), which is
    # invariable since it is context-specific.
    #
    nodePorts:
      http: 30080
      https: 30443
