test/testdata/ingress/reaper-ingress.yaml
# https://github.com/traefik/traefik/blob/v2.5.1/docs/content/reference/dynamic-configuration/traefik.containo.us_ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-dc1-reaper-service-http-ingress
  namespace: k8ssandra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`reaper.example.com`)
      kind: Rule
      services:
        - name: test-dc1-reaper-service
          port: 8080
