test/testdata/ingress/solr-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster1-dc1-solr-service-http-ingress
  namespace: k8ssandra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`solr.example.com`) && PathPrefix(`/solr`)
      kind: Rule
      services:
        - name: cluster1-dc1-service
          port: 8983
