test/testdata/ingress/stargate-cql-ingress.yaml
# This config map was generated by the ingress-nginx Helm chart, but we need to adapt the namespace and service name
# mapped to 9042.
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-nginx-tcp
data:
  '9042': k8ssandra-operator/demo-dc1-stargate-service:9042
